[package]
name = "mie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model",], default-features = false}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
ytd-rs = {version = "0.1.7", features = ["yt-dlp"] }
backblaze-b2-client = { git = "ssh://git@github.com/SalahaldinBilal/backblaze-b2-client-rs.git", branch = "move"}
backblaze-b2-client_https = { git = "https://github.com/SalahaldinBilal/backblaze-b2-client-rs.git", branch = "move"}
futures = "0.3.29"
nonzero_ext = "0.3.0"
tokio-util = "0.7.10"
dotenv = "0.15.0"
serde_json = "1.0.108"
urlencoding = "2.1.3"
sha1_smol = "1.0.0"
async-stream = "0.3.5"
openssl = { version = "0.10.59", features = ["vendored"] }
pretty-duration = "0.1.1"
futures-locks = "0.7.1"
lockfree = "0.5.1"
pretty-bytes = "0.2.2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "mysql"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = "1.0.192"
anyhow = "1.0.86"

[features]
default = [
    "serde",
    "serde_json",
    "url",
    "ytd-rs",
    "backblaze-b2-client",
    "futures",
    "nonzero_ext",
    "tokio-util",
    "dotenv",
    "sha1_smol",
    "async-stream",
    "openssl",
    "pretty-duration",
    "futures-locks",
    "lockfree",
    "pretty-bytes",
    "sqlx",
    "chrono",
    "anyhow",
]
b2_https = ["backblaze-b2-client_https"]
