[package]
name = "mie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
backblaze-b2-client = "0.1.6"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
dotenvy = "0.15.7"
url = "2.5.7"
rand = "0.8.5"
futures = "0.3.31"
tokio-util = "0.7.17"
nonzero_ext = "0.3.0"
serde_json = "1.0.145"
serde = "1.0.228"
urlencoding = "2.1.3"
sha1_smol = "1.0.1"
async-stream = "0.3.6"
openssl = { version = "0.10", features = ["vendored"] }
vesper = "0.13.0"
reqwest = { version = "0.12.24", features = ["json"] }
