[package]
name = "backblaze-b2-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version= "1.26.0", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
typed-builder = "0.14.0"
backblaze-b2-client-macros = { version = "=0.1.0", path = "../backblaze-b2-client-macros" }
serde_json = "1.0.96"
